--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="col-sm bg-primary">
                 One of three columns
             </div>
-            <div class="col-sm">
+            <div class="col-sm bg-warning">
                 One of three columns
             </div>
-            <div class="col-sm">
+            <div class="col-sm bg-danger">
                 One of three columns
             </div>
         </div>
