--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
 
-    <div class="container">
+    <div class="container-fluid">
+        <h1>Survey Form</h1>
         <div class="row">
             <div class="col-sm bg-primary">
                 One of three columns
