--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <div class="col-sm bg-danger">
                 One of three columns
             </div>
+            <div class="col-sm bg-danger">
+                One of three columns
+            </div>
         </div>
     </div>
 
