--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
-asdbsda
+
 
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -15,21 +15,26 @@ asdbsda
 </head>
 
 <body>
-
+    <h1 id="title" class="p-5">Survey Form</h1>
     <div class="container-fluid">
-        <h1>Survey Form</h1>
         <div class="row">
-            <div class="col-sm bg-primary">
-                One of three columns
-            </div>
-            <div class="col-sm bg-warning">
-                One of three columns
-            </div>
-            <div class="col-sm bg-danger">
-                One of three columns
-            </div>
-            <div class="col-sm bg-danger">
-                One of three columns
+            <div class="col-8 offset-2 table-bordered bg-light survey-background shadow p-3 mb-5 rounded">
+                <p id="description">Let us know how we can improve freeCodeCamp:</p>
+                <form id="survey-form">
+                    <div class="form-group row">
+                        <label for="name" class="col-sm-1 offset-3 col-form-label">Name:</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="name" placeholder="Enter Your Name" required>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="email" class="col-sm-1 offset-3 col-form-label">Email:</label>
+                        <div class="col-sm-6">
+                            <input type="email" class="form-control" id="email" placeholder="Enter Your E-Mail adress:" required>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary" type="submit">Submit form</button>
+                </form>
             </div>
         </div>
     </div>
