--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -20,19 +21,71 @@
         <div class="row">
             <div class="col-8 offset-2 table-bordered bg-light survey-background shadow p-3 mb-5 rounded">
                 <p id="description">Let us know how we can improve freeCodeCamp:</p>
+
+
                 <form id="survey-form">
+
                     <div class="form-group row">
-                        <label for="name" class="col-sm-1 offset-3 col-form-label">Name:</label>
+                        <label for="name" id="name-label" class="col-sm-1 offset-3 col-form-label">Name:</label>
                         <div class="col-sm-6">
                             <input type="text" class="form-control" id="name" placeholder="Enter Your Name" required>
                         </div>
                     </div>
+
                     <div class="form-group row">
-                        <label for="email" class="col-sm-1 offset-3 col-form-label">Email:</label>
+                        <label for="email" id="email-label" class="col-sm-1 offset-3 col-form-label">Email:</label>
                         <div class="col-sm-6">
                             <input type="email" class="form-control" id="email" placeholder="Enter Your E-Mail adress:" required>
                         </div>
                     </div>
+
+                    <div class="form-group row">
+                        <label for="number" id="number-label" class="col-sm-1 offset-3 col-form-label">Age:</label>
+                        <div class="col-sm-6">
+                            <input type="number" class="form-control" id="number" placeholder="Enter Your Age:" min="0" max="100" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="dropdown" id="dropdown-label" class="col-sm-3 offset-1 col-form-label">Which one describes you the best:</label>
+                        <div class="col-sm-6">
+                            <select class="custom-select form-control" id="dropdown">
+                                        <option selected>Open this select menu</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                      </select>
+                        </div>
+                    </div>
+
+
+                    <fieldset class="form-group">
+                        <div class="row">
+                            <legend class="col-form-label col-sm-1 offset-3 pt-0">Radios</legend>
+                            <div class="col-sm-6">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                                    <label class="form-check-label" for="gridRadios1">
+                                    First radio
+                                  </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                                    <label class="form-check-label" for="gridRadios2">
+                                    Second radio
+                                  </label>
+                                </div>
+                                <div class="form-check disabled">
+                                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
+                                    <label class="form-check-label" for="gridRadios3">
+                                    Third disabled radio
+                                  </label>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
+
+
                     <button class="btn btn-primary" type="submit">Submit form</button>
                 </form>
             </div>
