Added fcc tests

--- a/index.html
+++ b/index.html
@@ -23,33 +23,24 @@
             <div class="col-8 offset-2 table-bordered bg-light survey-background shadow p-3 mb-5 rounded">
                 <p id="description">Let us know how we can improve freeCodeCamp:</p>
 
-
                 <form id="survey-form">
 
                     <div class="form-group row">
+
                         <label for="name" id="name-label" class="col-sm-1 offset-3 col-form-label">Name:</label>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 pb-3">
                             <input type="text" class="form-control shadow-sm rounded" id="name" placeholder="Enter Your Name" required>
                         </div>
-                    </div>
-
-                    <div class="form-group row">
                         <label for="email" id="email-label" class="col-sm-1 offset-3 col-form-label">Email:</label>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 pb-3">
                             <input type="email" class="form-control shadow-sm rounded" id="email" placeholder="Enter Your E-Mail adress:" required>
                         </div>
-                    </div>
-
-                    <div class="form-group row">
                         <label for="number" id="number-label" class="col-sm-1 offset-3 col-form-label">Age:</label>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 pb-3">
                             <input type="number" class="form-control shadow-sm rounded" id="number" placeholder="Enter Your Age:" min="0" max="100" required>
                         </div>
-                    </div>
-
-                    <div class="form-group row">
                         <label for="dropdown" id="dropdown-label" class="col-sm-3 offset-1 col-form-label">Which one describes you the best:</label>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 pb-3">
                             <select class="custom-select form-control shadow-sm rounded" id="dropdown">
                                         <option selected>Open this select menu</option>
                                         <option value="1">One</option>
@@ -57,6 +48,7 @@
                                         <option value="3">Three</option>
                                       </select>
                         </div>
+
                     </div>
 
 
@@ -100,7 +92,7 @@
                         <div class="col-sm-6">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="checkbox2" id="gridCheck2">
-                                <label class="form-check-label" for="gridCheck1">
+                                <label class="form-check-label" for="gridCheck2">
                               Example checkbox
                             </label>
                             </div>
@@ -109,7 +101,7 @@
                         <div class="col-sm-6">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="checkbox3" id="gridCheck3">
-                                <label class="form-check-label" for="gridCheck1">
+                                <label class="form-check-label" for="gridCheck3">
                               Example checkbox
                             </label>
                             </div>
@@ -134,7 +126,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
